Fix image cropping

--- a/src/stylesheets/browse.scss
+++ b/src/stylesheets/browse.scss
@@ -10,6 +10,7 @@
     width: 100%;
 
     img {
+      align-self: center;
       max-width: 100%;
     }
   }
